k8s/infra/monitoring/alertmanager-discord-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-discord
  namespace: monitoring
  labels:
    app: alertmanager-discord
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: alertmanager-discord
  ports:
    - port: 9093
      targetPort: 9093
      protocol: TCP
