k8s/infra/monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.vityasy.me`)
      kind: Rule
      middlewares:
        - name: grafana-headers
      services:
        - name: monitoring-grafana
          port: 80
