k8s/infra/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.btd.smkn1baturaden.sch.id`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
